[package]
name = "darshan" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Darshan <pateldarshan421@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bitflags"
repository = "https://github.com/darshan1212/darshan/"
homepage = "http://www.aiburp.com/"
description = "Making use of Rust memory safety - demo version"
readme = "README.md"

[[bin]]
name = "hello-world"
path = "src/main.rs"